# Network-IDS-ML

./: .env.example  .gitignore  README.md  inspect_preprocessor.py  main.py  pyproject.toml  pytest.ini  repo_files.txt  requirements.txt  setup.py  test_fail.json  test_out.txt  test_pass.json  test_request.py  tmp_eval_log.txt  vulture_out.txt
.github/workflows/: ci.yml  nids-mlops.yml
ai-nids-platform/: docker-compose.yml
configs/datasets/: nsl_kdd.yaml  unsw_nb15.yaml
configs/models/: isolation_forest.yaml  random_forest.yaml  random_forest_hardened.yaml  random_forest_optimized.yaml
configs/training/: default.yaml  enterprise.yaml  eval_thresholds.yaml  fast_baseline.yaml  hardened_rf.yaml  optimized.yaml  unsw_nb15.yaml
deployment/: Dockerfile  docker-compose.yml  inference_api.py  prometheus.yml
docs/: API_REFERENCE.md  DEPLOYMENT_GUIDE.md  DOCKER_GUIDE.md  GETTING_STARTED.md  IMPLEMENTATION_GUIDE.md  INTEGRATION_SUMMARY.md  MIGRATION_GUIDE.md  Methodology.md  PROJECT_OVERVIEW.md  REFACTORING_REVIEW.md  Repository_Refactoring_Proposal.md  TECHNICAL_REFERENCE.md  TRAINING_GUIDE.md
experiments/unsw_validation/: unsw_validation_report.json
experiments/validation_report/: estimator_benchmark.json  features.json  threshold.json  validation_report.json
nids/: __init__.py
nids-platform/src/: __init__.py
nids/active_learning/: __init__.py  feedback.py  query.py
nids/adversarial/: validator.py
nids/data/: __init__.py  loaders.py  validators.py
nids/drift/: __init__.py  detector.py
nids/evaluation/: __init__.py  cross_dataset.py  metrics.py  soc_metrics.py  statistical.py
nids/explainability/: __init__.py  shap_explainer.py
nids/features/: __init__.py  selection.py
nids/governance/: drift.py  metrics_exporter.py  registry.py  retraining.py
nids/models/: __init__.py  anomaly.py  hybrid.py  stacking.py  supervised.py  unified.py  unsupervised.py
nids/pipelines/: __init__.py  evaluation.py  inference.py  training.py
nids/preprocessing/: __init__.py  preprocessor.py
nids/streaming/: alerts.py
nids/utils/: __init__.py  config.py  logging.py
requirements/: base.txt
scripts/: benchmark_estimators.py  cross_dataset_eval.py  download_data.py  download_datasets.py  evaluate.py  evaluate_gate.py  gate.py  train.py  validate_model.py  validate_unsw.py
src/: __init__.py  data_loader.py  download_datasets.py  evaluate.py  evaluation.py  feature_selection.py  hybrid_engine.py  hybrid_system.py  models.py  preprocessing.py  train_iforest.py  train_rf.py
tests/: test_preprocessor.py
(+71 files in other folders)
