[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nids"
version = "1.0.0"
description = "Production-grade Hybrid Network Intrusion Detection System"
authors = [{ name = "SOC Analytics", email = "soc@enterprise.local" }]
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "imbalanced-learn>=0.9.0",
    "scipy>=1.7.0",
    "joblib>=1.1.0",
    "PyYAML>=6.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "python-dotenv>=1.0.0",
    "python-json-logger>=2.0.7",
    "prometheus-client>=0.16.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0"
]
