[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nids"
version = "1.0.0"
description = "Production-grade Hybrid Network Intrusion Detection System"
authors = [{ name = "jivi001", email = "jiviteshgd28@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "imbalanced-learn>=0.9.0",
    "scipy>=1.7.0",
    "joblib>=1.1.0",
    "PyYAML>=6.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "python-dotenv>=1.0.0",
    "python-json-logger>=2.0.7",
    "prometheus-client>=0.16.0",
]

[project.urls]
Homepage = "https://github.com/jivi001/Network-IDS-ML"
Repository = "https://github.com/jivi001/Network-IDS-ML"

[project.scripts]
nids-train = "scripts.train:main"
nids-evaluate = "scripts.evaluate:main"
nids-cross-eval = "scripts.cross_dataset_eval:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "ruff>=0.1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["nids*", "scripts*", "deployment*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
